--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^0.1.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-feather": "^2.0.9",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
